--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,26 @@
-title: Wendell Thomas
+title: Doug Tabuchi
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/monday" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: ':title/'
 blog_theme: dark # Or use dark
 
 # Profile information
-name: Wendell Thomas
-tagline: Full Stack Developer
+name: Doug Tabuchi
+tagline: Software Engineer
 about-description: # Add Discription
 pic: 79.jpg  # Place a 200x200 picture inside /assets/img/ folder and provide the name of the file below
 
 # Contact links
-email: artemsheludko@tuta.io # Add your Email address
+email: doug@dougtabuchi.com # Add your Email address
 phone: 044 825 5523 # Add your Phone number
-website: artemsheludko.pw # Add your website, do not add http://
-linkedin: # Add your Linkedin handle
-github: artemsheludko # Add your Github handle
-twitter: '@artemsheludko_' # Add your Twitter handle
+website: dougtabuchi.com # Add your website, do not add http://
+linkedin: tabuchid# Add your Linkedin handle
+github: tabuchid # Add your Github handle
+twitter: '@tabuchid' # Add your Twitter handle
 
 # Tracker
 analytics:
