--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ blog_theme: dark # Or use dark
 # Profile information
 name: Doug Tabuchi
 tagline: Software Engineer
-about-description: # Add Discription
+about-description: > # Add Discription
+  Boating, Biking, Climbing, BBQ, Woodworking and Programming
 pic: 79.jpg  # Place a 200x200 picture inside /assets/img/ folder and provide the name of the file below
 
 # Contact links
@@ -19,7 +20,7 @@ email: doug@dougtabuchi.com # Add your Email address
 website: dougtabuchi.com # Add your website, do not add http://
 linkedin: tabuchid # Add your Linkedin handle
 github: tabuchid # Add your Github handle
-twitter: '@tabuchid' # Add your Twitter handle
+#twitter: '@tabuchid' # Add your Twitter handle
 
 # Tracker
 analytics:
